--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <link rel="icon" href="/favicon.ico" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test BCA Mobile</title>
+    <title>Movie Deejay</title>
   </head>
   <body>
     <div id="root"></div>
